<resources>
    <string name="app_name">NODES Mobile</string>
    <string name="site_notes">Site Notes</string>
    <string name="validate">validate</string>
    <string name="please_open">Please open the email on this device and return to this application to continue</string>
    <string name="a_one_time">A one-time activation link has been sent to your email address</string>
    <string name="did_not_re">Did not receive a link?</string>
    <string name="i_did_not_rec">I did not receive a link</string>
    <string name="the_nodes">The Nodes platform is only available to licensed users with registered email addresses.\n\nIf you did not yet receive an email, please wait a few minutes and check your junk mail, otherwise contact your system administrator</string>
    <string name="please_enter">Please enter your registered Nodes email address to continue</string>
    <string name="record_site_note">Record Site Note</string>
    <string name="tasks">Tasks</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="metric">metric</string>
    <string name="device_tracking">Device tracking</string>
    <string name="show_path">Show path</string>
    <string name="auto_map_download">Auto map download</string>
    <string name="data_usage">Data Usage</string>
    <string name="always">Always</string>
    <string name="help">Help</string>
    <string name="default_map">Default Map</string>
    <string name="night_mode">Night Mode</string>
    <string name="map">Map</string>
    <string name="logout">Log Out</string>
    <string name="automatic_text">"Automatic night mode will darken the screen when ambient light conditions are low"</string>
    <string name="on_text">Night mode remains On</string>
    <string name="off_text">Day mode remains On</string>
<!--    <string name="_34_41_28_68">34°41\'28.68\" N</string>-->
<!--    <string name="_135_10">135°10\'58.80\" E</string>-->
<!--    <string name="_2021_07_12">2021.07.12</string>-->
<!--    <string name="utc_09_12_24">UTC 09:12:24</string>-->
    <string name="numbers">Numbers</string>
    <string name="about">About NODES</string>
    <string name="about_text">About NODES text</string>
    <string name="about_nodes">About NODES</string>
    <string name="help_text">Help Text</string>
    <string name="ok">OK</string>
    <string name="overlay">Overlay</string>
    <string name="device">Device</string>
    <string name="nodes_device_link_id">NODES device link ID</string>
    <string name="nodes_device_id">Nodes device Id</string>
    <string name="unable_to_send_token">Unable to send token</string>
    <string name="unable_login">Unable to login</string>
    <string name="no_property">No Property found on Nodes Web for your account. So you won\'t see MapTiles on map</string>
    <string name="please_wait">Wait..</string>
    <string name="log_in">log in</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_logout">Do you want to Log Out?</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto">Auto</string>

    //Do not convert these in other languages, as they are used as keys
    <string name="app_notification_channel_id">nodes_channel</string>
    <string name="app_notification_channel_name">BrainPool</string>
    <string name="map_not_downloaded">This map has not been downloaded to your device. Please go online to download</string>
    <string name="map_not_found">Default Map Tiles are Empty for this property</string>

    <string name="downloading">Downloading Maps</string>
    <string name="permission_needed_rationale">Location and Storage permissions are required to use NODES Mobile</string>
    <string name="site_note">Site note</string>
    <string name="lat">Lat-</string>
    <string name="longit">Long-</string>
    <string name="add_images">Add images</string>
    <string name="assign_to_group">Assign to group</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!--    <string name="permission_rationale">Location permission needed for core functionality</string>
        <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
        <string name="is_using_location">is using location</string>
        <string name="downloading_maptiles">Downloading Map tiles in progress..</string>-->
</resources>