<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.ui.login.LoginEmailFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/grey_bg"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/units"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUnitsVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:textColor="@color/green_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvUnits"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvUnits" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeviceTracking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/device_tracking"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvUnits" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:thumb="@drawable/thumb_selector"
            app:layout_constraintBottom_toBottomOf="@+id/tvDeviceTracking"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvDeviceTracking"
            app:track="@drawable/track_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShowPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_path"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceTracking" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:thumb="@drawable/thumb_selector"
            app:layout_constraintBottom_toBottomOf="@+id/tvShowPath"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvShowPath"
            app:track="@drawable/track_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAutoMapDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/auto_map_download"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvShowPath" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:thumb="@drawable/thumb_selector"
            app:layout_constraintBottom_toBottomOf="@+id/tvAutoMapDownload"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvAutoMapDownload"
            app:track="@drawable/track_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDataUsage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/data_usage"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvAutoMapDownload" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDataUsageVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always"
            android:textColor="@color/green_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDataUsage"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvDataUsage" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNightMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/night_mode"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvDataUsage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNightModeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/green_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNightMode"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvNightMode" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDefaultMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/default_map"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvNightMode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDefaultMapVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDefaultMap"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvDefaultMap" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/help"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvDefaultMap" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAboutNodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="About NODES"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@+id/tvUnits"
            app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_chevron_right"
            android:tint="@color/green_text"
            app:layout_constraintBottom_toBottomOf="@+id/tvAboutNodes"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvAboutNodes" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>