<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg"
        tools:context=".view.ui.login.LoginEmailFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOneTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/a_one_time"
            android:textColor="@color/grey_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPleaseEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/please_open"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOneTime" />

        <RelativeLayout
            android:id="@+id/rvDidNotReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDidNotRecieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/did_not_re"
                android:textColor="@color/orange"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/tvDidNotRecieve"
                app:srcCompat="@drawable/ic_chevron_right"
                app:tint="@color/orange" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rvDidNotReceiveClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDidNotRecieveClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_did_not_rec"
                android:textColor="@color/orange"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibIdidNot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ibIdidNot" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ibIdidNot"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_right"
                app:tint="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/the_nodes"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tvDidNotRecieveClicked"
                app:layout_constraintTop_toBottomOf="@+id/tvDidNotRecieveClicked" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>